Added point buy calculator

--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -102,6 +102,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <li><a href="./tools/encounter_calculator/index.html">Encounter Calculator</a></li>
 <li><a href="./tools/combat_tracker/index.html">Combat Tracker</a></li>
 <li><a href="./tools/quick_monster_stats/index.html">Quick Monster Stats</a></li>
+<li><a href="./tools/point_buy_calculator/index.html">5e Point Buy Calculator</a></li>
 <li><a href="./tools/token_maker/index.html">Token Maker</a></li>
 <li><a href="./tools/annotator/index.html">Map Annotator</a></li>
 <li><a href="https://slyflourish.com/sf_patreon_files_898123050001223/dyson_maps.html">Dyson Commercial Map Gallery</a> (External Link)</li>
