Fixed ios zoom font sizes

--- a/5e_artisanal_database/tools/point_buy_calculator/index.html
+++ b/5e_artisanal_database/tools/point_buy_calculator/index.html
@@ -77,16 +77,18 @@ Learn about the licensing of the data of this tool in the license.html file loca
     padding: 4px;
     text-align: center;
     background: white;
+    -webkit-appearance: none;
+    appearance: none;
 }
 
 .ability-modifier {
-    font-size: 14px;
+    font-size: 16px;
     color: #666;
     margin-top: 5px;
 }
 
 .ability-cost {
-    font-size: 12px;
+    font-size: 16px;
     color: #888;
     margin-top: 5px;
 }
