Added location name generator

--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -108,20 +108,25 @@ document.addEventListener('DOMContentLoaded', function() {
 <li><a href="https://slyflourish.com/sf_patreon_files_898123050001223/dyson_maps.html">Dyson Commercial Map Gallery</a> (External Link)</li>
 </ul>
 
-<h2>Random Generators</h2>
+<h2>Treasure Generators</h2>
+<ul>
+<li><a href="./generators/treasure/index.html"">Lazy 5e Treasure</a></li>
+<li><a href="./generators/2024_dnd_treasure/index.html">2024 D&D Treasure</a></li>
+<li><a href="./generators/tov_treasure/index.html">Tales of the Valiant Treasure</a></li>
+<li><a href="./generators/scrolls/index.html">Scrolls</a></li>
+<li><a href="./generators/spellbook/index.html">Spellbooks</a></li>
+<li><a href="./generators/relics/index.html">Relics (single-use magic items)</a></li>
+<li><a href="./generators/weapons/index.html">Unique Weapons</a></li>
+<li><a href="./generators/armor/index.html">Unique Armor</a></li>
+</ul>
+
+<h2>Other Generators</h2>
 <ul>
 <li><a href="./generators/npcs/index.html">NPCs</a></li>
 <li><a href="./generators/monuments/index.html"">Monuments</a></li>
 <li><a href="./generators/locations/index.html"">Locations</a></li>
+<li><a href="./generators/location_names/index.html">Location Names</a></li>
 <li><a href="./generators/traps/index.html"">Traps</a></li>
-<li><a href="./generators/treasure/index.html"">Lazy 5e Treasure</a></li>
-<li><a href="./generators/scrolls/index.html">Scrolls</a></li>
-<li><a href="./generators/spellbook/index.html">Spellbooks</a></li>
-<li><a href="./generators/2024_dnd_treasure/index.html">2024 D&D Treasure</a></li>
-<li><a href="./generators/tov_treasure/index.html">Tales of the Valiant Treasure</a></li>
-<li><a href="./generators/relics/index.html">Relics (single-use magic items)</a></li>
-<li><a href="./generators/weapons/index.html">Unique Weapons</a></li>
-<li><a href="./generators/armor/index.html">Unique Armor</a></li>
 <li><a href="./generators/generator_template/index.html">Generator Template</a></li>
 </ul>
 
