--- a/5e_artisanal_database/generators/location_names/index.html
+++ b/5e_artisanal_database/generators/location_names/index.html
@@ -77,112 +77,115 @@ template
   {prefix} {suffix}
   
 prefix
-  Knight
-  Pony
-  Middle
-  Crows
   Apple
-  Bowers
-  Lyn
-  Ashen
   Arrows
-  Bell
-  Bush
-  Pigs
-  Lark
+  Ashen
   Avery
-  Stock
-  Witch
-  Fallon
-  Rams
   Bald
-  Vine
-  Round
-  Ham
-  Narrow
-  Three
-  Two
-  Mill
-  Rock
-  Stones
-  Sleepy
-  Twin
-  Kings
+  Bell
   Bent
-  Wagon
-  Leaning
-  Queens
-  Ox
-  Swallow
-  Martins
-  Shocklys
-  Three
-  Lone
-  Hanleys
-  Parleys
-  Stockmans
-  Oak
-  Crooked
-  Cart
-  Princes
-  Shepherds
+  Bowers
   Broken
+  Bush
+  Cart
+  Crooked
+  Crows
+  Dragon
+  Fallon
+  Ham
+  Hanleys
+  Kings
+  Knight
+  Lark
+  Leaning
+  Lone
+  Lyn
+  Martins
+  Middle
+  Mill
+  Narrow
+  Oak
+  Ox
+  Parleys
+  Pigs
+  Pony
+  Princes
+  Queens
+  Rams
+  Rock
+  Round
+  Shepherds
+  Shocklys
+  Sleepy
+  Stock
+  Stockmans
+  Stones
+  Swallow
+  Three
+  Three
+  Twin
+  Two
+  Vine
+  Wagon
+  Witch
+
 
 suffix
+  abby
+  acres
+  bridge
+  burg
+  burrough
+  canyon
+  cart
+  colony
+  corner
+  corners
+  creek
   cross
   crossing
-  ford
-  ton
-  orners
-  ville
-  town
-  colony
-  acres
-  flight
-  plain
-  moore
-  lake
-  meadow
-  hold
-  dale
-  wold
-  ferry
-  hallow
   crown
-  wild
-  top
+  dale
+  dale
+  dales
   fast
-  bridge
+  ferry
+  flight
+  ford
   forks
-  rivers
-  river
+  green
+  hallow
+  head
+  hold
+  lake
+  landing
+  manor
+  meadow
+  moore
+  pass
+  path
+  peaks
+  plain
+  point
   pond
   ridge
-  throw
-  head
-  dales
-  dale
-  towers
-  tree
-  canyon
-  burg
+  river
+  rivers
   shire
   station
-  burrough
-  manor
-  pass
-  peaks
-  path
-  creek
   sted
   stream
-  abby
-  landing
+  throw
+  ton
+  top
+  towers
+  town
+  tree
   vale
-  point
-  green
-  cart
+  ville
   weald
+  wild
+  wold
 `;
 
 
