Fixed 2024 wish and fireball

--- a/5e_artisanal_database/spells/html/5.2_srd_(d&d_2024)/fireball.html
+++ b/5e_artisanal_database/spells/html/5.2_srd_(d&d_2024)/fireball.html
@@ -20,6 +20,7 @@
 <li><strong>Source</strong>: 5.2 SRD (D&amp;D 2024)</li>
 </ul>
 <p>A bright streak flashes from you to a point you choose within range and then blossoms with a low roar into a fiery explosion. Each creature in a 20-foot-radius Sphere centered on that point makes a Dexterity saving throw, taking 8d6 Fire damage on a failed save or half as much damage on a successful one. Flammable objects in the area that aren't being worn or carried start burning.</p>
+<p><strong>Using a Higher-Level Spell Slot.</strong> The damage increases by 1d6 for each spell slot level above 3.</p>
 <p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/fireball.md">Markdown Format</a></p>
 </body>
 </html>
