Added quest generator
and some other fixes

--- a/5e_artisanal_database/spells/html/5.2_srd_(d&d_2024)/barkskin.html
+++ b/5e_artisanal_database/spells/html/5.2_srd_(d&d_2024)/barkskin.html
@@ -15,7 +15,7 @@
 <li><strong>Classes</strong>: Druid, Ranger</li>
 <li><strong>Casting Time</strong>: 1 bonus action</li>
 <li><strong>Range</strong>: Touch</li>
-<li><strong>Components</strong>: </li>
+<li><strong>Components</strong>: V, S, M (a handful of bark)</li>
 <li><strong>Duration</strong>: 1 hour</li>
 <li><strong>Source</strong>: 5.2 SRD (D&amp;D 2024)</li>
 </ul>
