--- a/5e_artisanal_database/spells/html/5.2_srd_(d&d_2024)/guidance.html
+++ b/5e_artisanal_database/spells/html/5.2_srd_(d&d_2024)/guidance.html
@@ -15,7 +15,7 @@
 <li><strong>Classes</strong>: Cleric, Druid</li>
 <li><strong>Casting Time</strong>: 1 action</li>
 <li><strong>Range</strong>: Touch</li>
-<li><strong>Components</strong>: </li>
+<li><strong>Components</strong>: V, S</li>
 <li><strong>Duration</strong>: Concentration, 1 minute</li>
 <li><strong>Source</strong>: 5.2 SRD (D&amp;D 2024)</li>
 </ul>
