--- a/5e_artisanal_database/spells/html/5.2_srd_(d&d_2024)/antipathysympathy.html
+++ b/5e_artisanal_database/spells/html/5.2_srd_(d&d_2024)/antipathysympathy.html
@@ -19,7 +19,10 @@
 <li><strong>Duration</strong>: 10 day</li>
 <li><strong>Source</strong>: 5.2 SRD (D&amp;D 2024)</li>
 </ul>
-<p>As you cast the spell, choose whether it creates antipathy or sympathy, and target one creature or object that is Huge or smaller. Then specify a kind of creature, such as red dragons, goblins, or vampires. A creature of the chosen kind makes a Wisdom saving throw when it comes within 120 feet of the target. Your choice of antipathy or sympathy determines what happens to a creature when it fails that save: Wisdom saving throw to end the effect, as described below.</p>
+<p>As you cast the spell, choose whether it creates antipathy or sympathy, and target one creature or object that is Huge or smaller. Then specify a kind of creature, such as red dragons, goblins, or vampires. A creature of the chosen kind makes a Wisdom saving throw when it comes within 120 feet of the target. Your choice of antipathy or sympathy determines what happens to a creature when it fails that save:</p>
+<p><strong>Antipathy</strong>. The creature has the Frightened condition. The Frightened creature must use its movement on its turns to get as far away as possible from the target, moving by the safest route.</p>
+<p><strong>Sympathy</strong>. The creature has the Charmed condition. The Charmed creature must use its movement on its turns to get as close as possible to the target, moving by the safest route. If the creature is within 5 feet of the target, the creature can't willingly move away. If the target damages the Charmed creature, that creature can make a Wisdom saving throw to end the effect, as described below.</p>
+<p><strong>Ending the Effect</strong>. If the Frightened or Charmed creature ends its turn more than 120 feet away from the target, the creature makes a Wisdom saving throw. On a successful save, the creature is no longer affected by the target. A creature that successfully saves against this effect is immune to it for 1 minute, after which it can be affected again.</p>
 <p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/antipathysympathy.md">Markdown Format</a></p>
 </body>
 </html>
