Added link to index

--- a/5e_artisanal_database/index.html
+++ b/5e_artisanal_database/index.html
@@ -123,6 +123,7 @@ document.addEventListener('DOMContentLoaded', function() {
 <h2>Other Generators</h2>
 <ul>
 <li><a href="./generators/npcs/index.html">NPCs</a></li>
+<li><a href="./generators/quests/index.html">Quests</a></li>
 <li><a href="./generators/monuments/index.html"">Monuments</a></li>
 <li><a href="./generators/locations/index.html"">Locations</a></li>
 <li><a href="./generators/location_names/index.html">Location Names</a></li>
