--- a/5e_artisanal_database/rules/html/5.2 SRD (D&D 2024)/06_Equipment.html
+++ b/5e_artisanal_database/rules/html/5.2 SRD (D&D 2024)/06_Equipment.html
@@ -200,13 +200,53 @@
 </tr>
 </tbody>
 </table>
-<p>Table: Simple Ranged Weapons 
-| Name                   | Damage          | Properties                                                | Mastery | Weight  | Cost   |
-|------------------------|-----------------|-----------------------------------------------------------|---------|---------|--------|
-| Dart                   | 1d4 Piercing    | Finesse, Thrown (Range 20/60)                             | Vex     | 1/4 lb. | 5 CP   |
-| Light Crossbow         | 1d8 Piercing    | Ammunition (Range 80/320; Bolt), Loading, Two-Handed   | Slow    | 5 lb.   | 25 GP  |
-| Shortbow               | 1d6 Piercing    | Ammunition (Range 80/320; Arrow), Two-Handed              | Vex     | 2 lb.   | 25 GP  |
-| Sling                  | 1d4 Bludgeoning | Ammunition (Range 30/120; Bullet)                         | Slow    | —       | 1 SP   |</p>
+<p>Table: Simple Ranged Weapons </p>
+<table>
+<thead>
+<tr>
+<th>Name</th>
+<th>Damage</th>
+<th>Properties</th>
+<th>Mastery</th>
+<th>Weight</th>
+<th>Cost</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Dart</td>
+<td>1d4 Piercing</td>
+<td>Finesse, Thrown (Range 20/60)</td>
+<td>Vex</td>
+<td>1/4 lb.</td>
+<td>5 CP</td>
+</tr>
+<tr>
+<td>Light Crossbow</td>
+<td>1d8 Piercing</td>
+<td>Ammunition (Range 80/320; Bolt), Loading, Two-Handed</td>
+<td>Slow</td>
+<td>5 lb.</td>
+<td>25 GP</td>
+</tr>
+<tr>
+<td>Shortbow</td>
+<td>1d6 Piercing</td>
+<td>Ammunition (Range 80/320; Arrow), Two-Handed</td>
+<td>Vex</td>
+<td>2 lb.</td>
+<td>25 GP</td>
+</tr>
+<tr>
+<td>Sling</td>
+<td>1d4 Bludgeoning</td>
+<td>Ammunition (Range 30/120; Bullet)</td>
+<td>Slow</td>
+<td>—</td>
+<td>1 SP</td>
+</tr>
+</tbody>
+</table>
 <p>Table: Martial Melee Weapons </p>
 <table>
 <thead>
