--- a/5e_artisanal_database/spells/html/5.2_srd_(d&d_2024)/command.html
+++ b/5e_artisanal_database/spells/html/5.2_srd_(d&d_2024)/command.html
@@ -20,6 +20,12 @@
 <li><strong>Source</strong>: 5.2 SRD (D&amp;D 2024)</li>
 </ul>
 <p>You speak a one-word command to a creature you can see within range. The target must succeed on a Wisdom saving throw or follow the command on its next turn. Choose the command from these options:</p>
+<ul>
+<li><strong>Drop.</strong> The target drops whatever it is holding and then ends its turn.</li>
+<li><strong>Flee.</strong> The target spends its turn moving away from you by the fastest available means.</li>
+<li><strong>Grovel.</strong> The target has the Prone condition and then ends its turn.</li>
+<li><strong>Halt.</strong> On its turn, the target doesn't move and takes no action or Bonus Action.</li>
+</ul>
 <p><strong>Using a Higher-Level Spell Slot.</strong> You can affect one additional creature for each spell slot level above 1.</p>
 <p><a href="../../../licensing.html">Licensing</a> – <a href="../../md/5.2_srd_(d&d_2024)/command.md">Markdown Format</a></p>
 </body>
