Added dark mode
Added a dark mode based on your system's settings. Consolidated a lot of CSS stuff.

--- a/5e_artisanal_database/rules_search/index.html
+++ b/5e_artisanal_database/rules_search/index.html
@@ -15,122 +15,8 @@ all without asking permission.
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../css_js/5eadb.css">
 <title>5.2 SRD Rules Search</title>
-<style>
-/* Search-specific styles */
-.search-container {
-    margin: 20px 0;
-    max-width: 600px;
-}
-
-.search-input {
-    width: 100%;
-    padding: 12px;
-    font-size: 16px;
-    border: 2px solid #ddd;
-    border-radius: 4px;
-    box-sizing: border-box;
-    min-height: 44px;
-}
-
-.search-input:focus {
-    border-color: #666;
-    outline: none;
-}
-
-.search-stats {
-    color: #666;
-    font-size: 14px;
-    margin: 15px 0 10px 0;
-}
-
-.search-results {
-    margin-top: 20px;
-}
-
-.result-item {
-    border: 1px solid #ddd;
-    margin: 15px 0;
-    padding: 15px;
-    border-radius: 4px;
-    background-color: #f9f9f9;
-}
-
-.result-title {
-    font-weight: bold;
-    font-size: 18px;
-    margin-bottom: 8px;
-}
-
-.result-title a {
-    color: #1a0dab;
-    text-decoration: underline;
-}
-
-.result-title a:visited {
-    color: #609;
-}
-
-.result-content {
-    color: #333;
-    line-height: 1.6;
-}
-
-.result-content p {
-    margin: 8px 0;
-}
-
-.result-content h1, .result-content h2, .result-content h3 {
-    margin-top: 12px;
-    margin-bottom: 8px;
-}
-
-.result-content table {
-    margin: 10px 0;
-    border-collapse: collapse;
-    width: 100%;
-}
-
-.result-content th, .result-content td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-}
-
-.result-content th {
-    background-color: #f0f0f0;
-    font-weight: bold;
-}
-
-.no-results {
-    text-align: center;
-    color: #666;
-    font-style: italic;
-    margin: 40px 0;
-    font-size: 16px;
-}
-
-.loading {
-    text-align: center;
-    color: #666;
-    margin: 40px 0;
-    font-size: 16px;
-}
-
-.highlight {
-    background-color: #ffff99;
-    padding: 2px 4px;
-    border-radius: 2px;
-}
-
-.intro-text {
-    color: #666;
-    margin: 15px 0;
-    font-size: 16px;
-    line-height: 1.5;
-}
-</style>
 </head>
-<body>
+<body class="rules-search">
 
 <div><a href="../index.html">5e Artisanal Database</a> → Rules Search</div>
 <h1>5.2 SRD Rules Search</h1>
