--- a/5e_artisanal_database/tools/combat_tracker/index.html
+++ b/5e_artisanal_database/tools/combat_tracker/index.html
@@ -8,280 +8,11 @@ Learn about the licensing of the data of this tool in the license.html file loca
 <meta name="robots" content="noindex">
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../../css_js/5eadb.css">
-<style>
-/* Combat Tracker specific styles */
-
-/* Combat Tracker specific overrides */
-input[type="text"] {
-    text-align: left;
-}
-
-/* Remove spinner arrows from all number inputs */
-input[type=number]::-webkit-outer-spin-button,
-input[type=number]::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-}
-input[type=number] {
-    -moz-appearance: textfield;
-}
-
-table {
-    width: 100%;
-    margin: 10px 0;
-    table-layout: auto;
-}
-
-th, td {
-    border: 1px solid #999;
-    padding: 6px;
-    vertical-align: middle;
-    text-align: left;
-}
-
-th {
-    background-color: #e0e0e0;
-    font-size: 16px;
-}
-
-.init-col {
-    width: 40px;
-    text-align: center;
-}
-.init-col input {
-    font-size: 16px;
-}
-.name-col {
-    min-width: 160px;
-    text-align: left !important;
-}
-.ac-col {
-    width: 45px;
-    text-align: center;
-}
-.ac-col input {
-    font-size: 16px;
-}
-.hp-col {
-    width: 300px;
-    min-width: 100px;
-}
-.hp-col input {
-    font-size: 16px;
-}
-
-.controls {
-    margin: 10px 0;
-    padding: 8px;
-    border: 1px solid #ccc;
-    background-color: #f9f9f9;
-    border-radius: 4px;
-}
-
-.controls h3 {
-    margin: 0 0 8px 0;
-}
-
-.controls input {
-    margin: 2px;
-    padding: 6px;
-    background-color: white;
-    color: black;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-}
-
-.hp-controls {
-    display: flex;
-    align-items: center;
-    gap: 2px;
-    flex-wrap: wrap;
-}
-
-/* Consolidated button styling */
-.hp-controls button,
-.combat-controls button {
-    background-color: #666;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 4px;
-}
-
-.hp-controls button:hover,
-.combat-controls button:hover {
-    background-color: #555;
-}
-
-.hp-controls button {
-    padding: 4px 8px;
-    margin: 0;
-    min-width: 28px;
-}
-
-.hp-controls input {
-    width: 50px;
-    text-align: center;
-    margin: 0;
-    padding: 3px;
-    background-color: white;
-    color: black;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-.hp-controls span {
-    margin: 0 2px;
-}
-
-.current-turn {
-    background-color: #d0d0d0;
-    font-weight: bold;
-}
-
-.remove-btn {
-    background-color: #666;
-    color: white;
-    border: none;
-    padding: 4px 8px;
-    cursor: pointer;
-    font-weight: bold;
-    border-radius: 4px;
-}
-
-.remove-btn:hover {
-    background-color: #555;
-}
-
-.combat-controls {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 5px;
-    justify-content: center;
-    margin: 10px 0;
-}
-
-.combat-controls button {
-    padding: 8px 12px;
-    flex: 1;
-    min-width: 70px;
-    max-width: 100px;
-    min-height: 32px;
-}
-
-/* Monster search styling to match encounter calculator */
-.search-row {
-    display: flex;
-    gap: 12px;
-    align-items: flex-end;
-}
-
-.search-input-group {
-    flex: 2;
-    display: flex;
-    flex-direction: column;
-}
-
-.source-select-group {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    min-width: 120px;
-}
-
-.search-input-group label,
-.source-select-group label {
-    font-weight: bold;
-    margin-bottom: 3px;
-    font-size: 16px;
-}
-
-.monster-search {
-    width: 100%;
-    padding: 2px 6px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    box-sizing: border-box;
-    text-align: left;
-}
-
-select {
-    padding: 8px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-    box-sizing: border-box;
-}
-
-/* Common button and input classes for inline style consolidation */
-.hp-button {
-    background-color: #666 !important;
-    color: white !important;
-    border: none !important;
-    padding: 3px 8px !important;
-    cursor: pointer;
-    font-size: 16px !important;
-    margin: 0 2px !important;
-    border-radius: 3px !important;
-    line-height: 16px !important;
-    height: auto !important;
-    min-height: auto !important;
-    box-sizing: border-box !important;
-}
-
-.hp-button:hover {
-    background-color: #555 !important;
-}
-
-.hp-input {
-    width: 35px;
-    font-size: 16px;
-    text-align: center;
-    margin: 0 3px;
-    padding: 1px;
-    background-color: white;
-    color: black;
-    border: 1px solid #999;
-}
-
-.transparent-input {
-    border: none;
-    background: transparent;
-    font-size: 16px;
-    width: 35px;
-    font-weight: bold;
-    text-align: center;
-    color: black;
-    padding: 1px;
-}
-
-.remove-button {
-    background-color: #d9534f !important;
-    color: white !important;
-    border: none !important;
-    padding: 2px 6px !important;
-    cursor: pointer;
-    font-size: 12px !important;
-    margin: 0 2px !important;
-    border-radius: 3px !important;
-    line-height: 14px !important;
-    height: auto !important;
-    min-height: auto !important;
-    box-sizing: border-box !important;
-}
-
-.remove-button:hover {
-    background-color: #c9302c !important;
-}
-
-</style>
 <title>Combat Tracker - 5e Artisanal Database</title>
 <script src="../../css_js/monster_combat_stats.js"></script>
 <script src="../../monsters/custom/custom_monster_index.js"></script>
 </head>
-<body>
+<body class="combat-tracker">
 <div><a href="../../index.html">5e Artisanal Database</a> → Combat Tracker</div>
 
 <h1>Combat Tracker</h1>
