--- a/5e_artisanal_database/tools/encounter_calculator/index.html
+++ b/5e_artisanal_database/tools/encounter_calculator/index.html
@@ -11,212 +11,12 @@ Learn about the licensing of the data of this tool in the license.html file loca
 <meta name="robots" content="noindex">
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../../css_js/5eadb.css">
-<style>
-/* Encounter Calculator Specific Styles */
-table {
-    width: 100%;
-    margin: 10px 0;
-}
-th {
-    background-color: #f0f0f0;
-}
-
-/* Common Layout Classes */
-.flex-column {
-    display: flex;
-    flex-direction: column;
-}
-.flex-row {
-    display: flex;
-    gap: 12px;
-    align-items: flex-end;
-    flex-wrap: wrap;
-}
-
-/* Section Base */
-.section-base {
-    margin: 15px 0;
-    padding: 10px;
-    border: 2px solid;
-    border-radius: 5px;
-}
-.input-section {
-    border-color: #ccc;
-}
-.results {
-    border-color: #333;
-    padding: 12px;
-    background-color: #f8f8f8;
-}
-.input-section h3, .results h3 {
-    margin-top: 0;
-    margin-bottom: 10px;
-}
-
-/* Input Groups */
-.input-group-base {
-    display: flex;
-    flex-direction: column;
-    min-width: 120px;
-}
-.character-group, .monster-group {
-    gap: 8px;
-    margin: 8px 0;
-    padding: 8px;
-    background-color: #f9f9f9;
-    border-radius: 3px;
-}
-.search-input-group {
-    flex: 2;
-}
-.source-select-group {
-    flex: 1;
-    min-width: 120px;
-}
-
-/* Label Styling */
-.input-group label,
-.search-input-group label,
-.source-select-group label {
-    font-weight: bold;
-    margin-bottom: 3px;
-    font-size: 16px;
-}
-
-/* Input Base Styling */
-input, select, .monster-search {
-    padding: 8px;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 3px;
-}
-.monster-search {
-    width: 100%;
-    box-sizing: border-box;
-}
-
-/* Monster Search Components */
-.monster-search-container {
-    position: relative;
-    margin-top: 8px;
-}
-.monster-dropdown {
-    position: absolute;
-    top: 100%;
-    left: 0;
-    right: 0;
-    background: white;
-    border: 1px solid #ccc;
-    border-top: none;
-    border-radius: 0 0 3px 3px;
-    max-height: 200px;
-    overflow-y: auto;
-    z-index: 1000;
-    display: none;
-}
-.monster-option {
-    padding: 8px;
-    cursor: pointer;
-    border-bottom: 1px solid #eee;
-}
-.monster-option:hover, .monster-option.highlighted {
-    background-color: #f0f0f0;
-}
-.monster-option:last-child {
-    border-bottom: none;
-}
-.cr-tag {
-    float: right;
-    color: #666;
-    font-size: 14px;
-}
-.monster-name-display {
-    font-style: italic;
-    color: #666;
-    margin-top: 4px;
-    font-size: 14px;
-}
-
-/* Button Base */
-.button-base {
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 3px;
-}
-.add-button {
-    background-color: #777;
-    padding: 8px 15px;
-    font-size: 16px;
-}
-.add-button:hover {
-    background-color: #555;
-}
-.remove-button {
-    background-color: #f44336;
-    padding: 5px 10px;
-    font-size: 14px;
-    align-self: flex-end;
-}
-.remove-button:hover {
-    background-color: #da190b;
-}
-.button-row {
-    display: flex;
-    gap: 10px;
-    flex-wrap: wrap;
-    align-items: center;
-}
-
-/* Difficulty Base */
-.difficulty-base {
-    font-weight: bold;
-}
-.difficulty-easy { color: green; }
-.difficulty-medium { color: orange; }
-.difficulty-hard { color: red; }
-.difficulty-deadly { color: darkred; }
-.difficulty-warning { color: #DAA520; }
-
-/* Media Queries */
-@media (max-width: 600px) {
-    .flex-row {
-        flex-direction: column;
-        align-items: stretch;
-    }
-    .input-group-base {
-        min-width: auto;
-    }
-    .remove-button {
-        align-self: center;
-        margin-top: 10px;
-    }
-    .button-row {
-        flex-direction: column;
-        gap: 8px;
-    }
-    .button-row .add-button {
-        width: 100%;
-    }
-    .search-input-group,
-    .source-select-group {
-        flex: none !important;
-        min-width: auto !important;
-        width: 100%;
-    }
-    .monster-search, 
-    .monster-source-filter {
-        width: 100% !important;
-        box-sizing: border-box;
-    }
-}
-</style>
 <title>5e Encounter Calculator</title>
 <script src="../../css_js/monster_combat_stats.js"></script>
 <script src="../../monsters/custom/custom_monster_index.js"></script>
 <script src="../../css_js/monster-lookup.js"></script>
 </head>
-<body>
+<body class="encounter-calculator">
 <p><a href="../../index.html">5e Artisanal Database</a> → 5e Encounter Calculator</p>
 
 <h1>5e Encounter Calculator</h1>
