--- a/5e_artisanal_database/tools/point_buy_calculator/index.html
+++ b/5e_artisanal_database/tools/point_buy_calculator/index.html
@@ -11,120 +11,9 @@ Learn about the licensing of the data of this tool in the license.html file loca
 <meta name="robots" content="noindex">
 <meta charset="UTF-8">
 <link rel="stylesheet" href="../../css_js/5eadb.css">
-<style>
-/* Point Buy Calculator Specific Styles */
-.ability-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 10px;
-    margin: 20px 0;
-}
-
-.ability-card {
-    background: #f9f9f9;
-    border: 2px solid #ccc;
-    border-radius: 5px;
-    padding: 8px;
-    text-align: center;
-}
-
-.ability-name {
-    font-weight: bold;
-    font-size: 16px;
-    margin-bottom: 5px;
-    color: #333;
-}
-
-.ability-controls {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 8px;
-    margin: 5px 0;
-}
-
-.ability-button {
-    background-color: #444;
-    color: white;
-    border: none;
-    border-radius: 3px;
-    width: 30px;
-    height: 30px;
-    font-size: 16px;
-    font-weight: bold;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.ability-button:hover:not(:disabled) {
-    background-color: #222;
-}
-
-.ability-button:disabled {
-    background-color: #aaa;
-    cursor: not-allowed;
-}
-
-.ability-score {
-    font-size: 20px;
-    font-weight: bold;
-    color: #333;
-    width: 50px;
-    border: 2px solid #666;
-    border-radius: 3px;
-    padding: 4px;
-    text-align: center;
-    background: white;
-    -webkit-appearance: none;
-    appearance: none;
-}
-
-.ability-modifier {
-    font-size: 16px;
-    color: #666;
-    margin-top: 5px;
-}
-
-.ability-cost {
-    font-size: 16px;
-    color: #888;
-    margin-top: 5px;
-}
-
-
-.reset-button {
-    background-color: #666;
-    color: white;
-    border: none;
-    border-radius: 3px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-    margin: 10px;
-}
-
-.reset-button:hover {
-    background-color: #444;
-}
-
-
-@media (max-width: 480px) {
-    .ability-grid {
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
-
-@media (max-width: 320px) {
-    .ability-grid {
-        grid-template-columns: 1fr;
-    }
-}
-</style>
 <title>5e Point Buy Calculator</title>
 </head>
-<body>
+<body class="point-buy-calculator">
 <p><a href="../../index.html">5e Artisanal Database</a> → 5e Point Buy Calculator</p>
 
 <h1>5e Point Buy Calculator</h1>
