--- a/5e_artisanal_database/generators/location_names/index.html
+++ b/5e_artisanal_database/generators/location_names/index.html
@@ -14,36 +14,8 @@ all without asking permission.
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
 <meta name="robots" content="noindex">
 <meta charset="UTF-8">
+<link rel="stylesheet" href="../../css_js/5eadb.css">
 <title>Location Names</title>
-<style>
-body {
-    max-width: 800px;
-    margin: auto;
-    font-size: 18px;
-    font-family: sans-serif;
-    padding: 10px;
-}
-
-p, li {
-    line-height: 1.5em;
-}
-
-button {
-    font-size: 18px;
-    min-height: 44px;
-    padding: 12px 16px;
-    margin: 5px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-    background-color: #f9f9f9;
-    cursor: pointer;
-    touch-action: manipulation;
-}
-
-button:hover {
-    background-color: #e9e9e9;
-}
-</style>
 </head>
 <body>
 <div><a href="../../index.html">5e Artisanal Database</a> → Location Names</div>
