--- a/5e_artisanal_database/rules/html/5.2 SRD (D&D 2024)/01_PlayingTheGame.html
+++ b/5e_artisanal_database/rules/html/5.2 SRD (D&D 2024)/01_PlayingTheGame.html
@@ -706,12 +706,37 @@ The adventurers should establish a marching order while they travel, whether ind
 <p>If you need to know how fast you can move when every second matters, see the movement rules in “Combat” later in “Playing the Game.”</p>
 <h4>Travel Pace</h4>
 <p>While traveling outside combat, a group can move at a Fast, Normal, or Slow pace, as shown on the Travel Pace table. The table states how far the party can move in a period of time; if riding horses or other mounts, the group can move twice that distance for 1 hour, after which the mounts need a Short or Long Rest before they can move at that increased pace again (see “Equipment” for a selection of mounts for sale). “Gameplay Toolbox” has rules that affect which pace you can choose in certain types of terrain.</p>
-<p>Table: Travel Pace - Distance Traveled Per …
-| Pace   | Minute   | Hour    | Day      |
-|--------|----------|---------|----------|
-| Fast   | 400 feet | 4 miles | 30 miles |
-| Normal | 300 feet | 3 miles | 24 miles |
-| Slow   | 200 feet | 2 miles | 18 miles |</p>
+<p>Table: Travel Pace - Distance Traveled Per...</p>
+<table>
+<thead>
+<tr>
+<th>Pace</th>
+<th>Minute</th>
+<th>Hour</th>
+<th>Day</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Fast</td>
+<td>400 feet</td>
+<td>4 miles</td>
+<td>30 miles</td>
+</tr>
+<tr>
+<td>Normal</td>
+<td>300 feet</td>
+<td>3 miles</td>
+<td>24 miles</td>
+</tr>
+<tr>
+<td>Slow</td>
+<td>200 feet</td>
+<td>2 miles</td>
+<td>18 miles</td>
+</tr>
+</tbody>
+</table>
 <p>Each travel pace has a game effect, as defined below.</p>
 <p><strong>Fast.</strong> Traveling at a Fast pace imposes Disadvantage on a traveler’s Wisdom (Perception or Survival) and Dexterity (Stealth) checks.</p>
 <p><strong>Normal.</strong> Traveling at a Normal pace imposes Disadvantage on Dexterity (Stealth) checks.</p>
